remove some fields

--- a/index.html
+++ b/index.html
@@ -77,90 +77,6 @@
                   </div>
 
                   <div
-                    id="onskar-select"
-                    class="base-select create-project-description__input _shadow _large"
-                  >
-                    <span class="base-input__label"
-                      >När önskar du att få hjälp?</span
-                    >
-                    <!-- <span class="base-input__label"> Jag är... </span> -->
-
-                    <div class="base-select__select">
-                      <div class="base-select__container">
-                        <div
-                          id="base-select__value__onskar"
-                          class="base-select__value"
-                        ></div>
-                        <!----><!---->
-                        <div id="onskar-button" class="base-select__arrow">
-                          <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            width="240"
-                            height="240"
-                            viewBox="0 0 24 24"
-                            style="fill: rgba(0, 0, 0, 1)"
-                          >
-                            <path
-                              d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"
-                            ></path>
-                          </svg>
-                        </div>
-                      </div>
-                      <div
-                        style="display: none"
-                        id="onskar-select-item"
-                        class="base-select__dropdown-wrap"
-                      >
-                        <div
-                          id="onskar-select-dropdown"
-                          class="base-select__dropdown"
-                        ></div>
-                      </div>
-                    </div>
-
-                    <!---->
-                  </div>
-                </div>
-
-                <div class="create-project-description__row">
-                  <!-- <div
-                    id="onskat-select"
-                    class="base-select create-project-description__input _shadow _large"
-                  >
-                    <span class="base-input__label">
-                      Vad behöver du hjälp med?
-                    </span>
-
-                    <div class="base-select__select">
-                      <div class="base-select__container">
-                        <div
-                          id="base-select__value__onskat"
-                          class="base-select__value"
-                        ></div>
-                        <div id="onskat-button" class="base-select__arrow">
-                          <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            width="240"
-                            height="240"
-                            viewBox="0 0 24 24"
-                            style="fill: rgba(0, 0, 0, 1)"
-                          >
-                            <path
-                              d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"
-                            ></path>
-                          </svg>
-                        </div>
-                      </div>
-                      <div
-                        style="display: none"
-                        class="base-select__dropdown-wrap"
-                      >
-                        <div class="base-select__dropdown"></div>
-                      </div>
-                    </div>
-                  </div> -->
-
-                  <div
                     id="Jag-ar-select"
                     class="base-select create-project-description__input _shadow _large"
                   >
@@ -216,6 +132,90 @@
                     placeholder="En tydlig beskrivning ger fler och bättre svar..."
                   ></textarea>
                 </label>
+
+                <div class="create-project-description__row">
+                  <!-- <div
+                    id="onskat-select"
+                    class="base-select create-project-description__input _shadow _large"
+                  >
+                    <span class="base-input__label">
+                      Vad behöver du hjälp med?
+                    </span>
+
+                    <div class="base-select__select">
+                      <div class="base-select__container">
+                        <div
+                          id="base-select__value__onskat"
+                          class="base-select__value"
+                        ></div>
+                        <div id="onskat-button" class="base-select__arrow">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="240"
+                            height="240"
+                            viewBox="0 0 24 24"
+                            style="fill: rgba(0, 0, 0, 1)"
+                          >
+                            <path
+                              d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"
+                            ></path>
+                          </svg>
+                        </div>
+                      </div>
+                      <div
+                        style="display: none"
+                        class="base-select__dropdown-wrap"
+                      >
+                        <div class="base-select__dropdown"></div>
+                      </div>
+                    </div>
+                  </div> -->
+
+                  <div
+                    id="onskar-select"
+                    class="base-select create-project-description__input _shadow _large"
+                  >
+                    <span class="base-input__label"
+                      >När önskar du att få hjälp?</span
+                    >
+                    <!-- <span class="base-input__label"> Jag är... </span> -->
+
+                    <div class="base-select__select">
+                      <div class="base-select__container">
+                        <div
+                          id="base-select__value__onskar"
+                          class="base-select__value"
+                        ></div>
+                        <!----><!---->
+                        <div id="onskar-button" class="base-select__arrow">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="240"
+                            height="240"
+                            viewBox="0 0 24 24"
+                            style="fill: rgba(0, 0, 0, 1)"
+                          >
+                            <path
+                              d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"
+                            ></path>
+                          </svg>
+                        </div>
+                      </div>
+                      <div
+                        style="display: none"
+                        id="onskar-select-item"
+                        class="base-select__dropdown-wrap"
+                      >
+                        <div
+                          id="onskar-select-dropdown"
+                          class="base-select__dropdown"
+                        ></div>
+                      </div>
+                    </div>
+
+                    <!---->
+                  </div>
+                </div>
 
                 <!-- <label
                   class="base-input create-project-description__input _shadow"
@@ -318,9 +318,10 @@
 
           <div style="display: none" class="auth-registration-page container">
             <div class="auth-registration-page__content container-inner">
-              <h2 class="auth-registration-page__title">Skapa konto</h2>
+              <h2 class="auth-registration-page__title">Skapa förfrågan</h2>
               <p class="auth-registration-page__description">
-                Vänligen skapa ett konto.
+                Jämför offerter kostnadsfritt få svar av upp till fem
+                renoveringsföretag.
               </p>
 
               <form class="auth-registration-page__form auth-form">
@@ -335,7 +336,7 @@
                     />
                   </label>
                   <label class="base-input auth-form__input" name="surname">
-                    <span class="base-input__label"> Efternamn </span>
+                    <span class="base-input__label"> E-post </span>
                     <input
                       id="efternamn"
                       type="text"
@@ -345,19 +346,6 @@
                   </label>
                 </div>
                 <div class="auth-form__row">
-                  <label
-                    class="base-input auth-form__input"
-                    type="email"
-                    name="email"
-                  >
-                    <span class="base-input__label"> Mejl </span>
-                    <input
-                      id="mejl"
-                      type="email"
-                      name="email"
-                      class="base-input__input"
-                    />
-                  </label>
                   <label
                     class="base-input auth-form__input"
                     type="tel"
