--- a/index.html
+++ b/index.html
@@ -11,6 +11,62 @@
   </head>
   <body>
     <div id="app" class="app">
+      <header class="the-header container app__header">
+        <!-- <picture class="the-header__bg-picture"
+          ><source
+            srcset="./img/4_xs.c030c4bf.jpg"
+            media="(max-width: 520px)"
+            style="object-position: center top" />
+          <source
+            srcset="./img/4_sm.656eeb42.jpg"
+            media="(max-width: 768px)"
+            style="object-position: center top" />
+          <source
+            srcset="./img/4_md.c942017a.jpg"
+            media="(max-width: 1024px)"
+            style="object-position: center top" />
+          <img
+            src="./img/4.af3a5b8a.jpg"
+            alt="header bg"
+            style="object-position: center top"
+        /></picture> -->
+
+        <!-- <picture class="the-header__bg-picture">
+          <source
+            style="object-position: center top"
+            srcset="./img/52F77576-D47A-48CD-A2E1-7429A16BF417.jpeg"
+          />
+        </picture> -->
+
+        <img
+          class="the-header__bg-picture"
+          src="./img/52F77576-D47A-48CD-A2E1-7429A16BF417.jpeg"
+          alt=""
+          style="object-position: center top; object-fit: cover"
+        />
+
+        <div class="the-header__top">
+          <div class="the-header__top-content">
+            <div class="logo the-header__logo">
+              <img
+                style="height: 30px"
+                src="./img/06094416-4AFC-4E4B-A57E-495AAD06F067 (1).png"
+                alt=""
+              />
+            </div>
+            <!---->
+          </div>
+        </div>
+        <div class="the-header__middle container-inner">
+          <div class="the-header__middle-content">
+            <!---->
+            <h1 class="the-header__title">Ny offertförfrågan</h1>
+            <!----><!----><!---->
+          </div>
+        </div>
+        <!---->
+      </header>
+
       <main class="app__main">
         <div class="home-page container">
           <div
