chaning in thank page

--- a/index.html
+++ b/index.html
@@ -456,8 +456,8 @@
                 Tack för din förfrågan!
               </h2>
               <p class="auth-registration-page__description">
-                Vi kommer nu att granska din förfrågan sedan kommer den att
-                publiceras för våra anslutna webbyråer
+                Vi kommer nu att granska din förfrågan sedan kommer våra
+                anslutna renoveringsföretag att kontakta dig för en offert.
               </p>
 
               <div class="auth-registration-page__form auth-form">
