--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header class="the-header container app__header">
         <img
           class="the-header__bg-picture"
-          src="./img/E4121322-4B05-489E-8FC0-28F6BC6781BD.jpeg"
+          src="./img/7300074C-273F-49A6-9661-CB367AB61AA5.png"
           alt=""
           style="object-position: center top; object-fit: cover"
         />
@@ -31,9 +31,8 @@
             <!---->
           </div>
         </div>
-        <div class="the-header__middle container-inner">
+        <!-- <div class="the-header__middle container-inner">
           <div class="the-header__middle-content">
-            <!---->
             <div class="logo the-header__logo centered">
               <img
                 style="height: 30px"
@@ -41,10 +40,8 @@
                 alt=""
               />
             </div>
-            <!----><!----><!---->
           </div>
-        </div>
-        <!---->
+        </div> -->
       </header>
 
       <main class="app__main">
