--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header class="the-header container app__header">
         <img
           class="the-header__bg-picture"
-          src="./img/7300074C-273F-49A6-9661-CB367AB61AA5.png"
+          src="./img/1E655039-2EFF-4357-88D0-7A4F7CF1D1AC.jpeg"
           alt=""
           style="object-position: center top; object-fit: cover"
         />
