--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <!---->
           </div>
         </div>
-        <!-- <div class="the-header__middle container-inner">
+        <div class="the-header__middle container-inner">
           <div class="the-header__middle-content">
             <div class="logo the-header__logo centered">
               <img
@@ -41,7 +41,7 @@
               />
             </div>
           </div>
-        </div> -->
+        </div>
       </header>
 
       <main class="app__main">
