--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header class="the-header container app__header">
         <img
           class="the-header__bg-picture"
-          src="./img/3DE358D3-22B7-422D-BD8A-0F525C0A2945.jpeg"
+          src="./img/7300074C-273F-49A6-9661-CB367AB61AA5.png"
           alt=""
           style="object-position: center top; object-fit: cover"
         />
@@ -31,8 +31,9 @@
             <!---->
           </div>
         </div>
-        <!-- <div class="the-header__middle container-inner">
+        <div class="the-header__middle container-inner">
           <div class="the-header__middle-content">
+            <!---->
             <div class="logo the-header__logo centered">
               <img
                 style="height: 30px"
@@ -41,7 +42,8 @@
               />
             </div>
           </div>
-        </div> -->
+        </div>
+        <!---->
       </header>
 
       <main class="app__main">
