--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header class="the-header container app__header">
         <img
           class="the-header__bg-picture"
-          src="./img/7300074C-273F-49A6-9661-CB367AB61AA5.png"
+          src="./img/52F77576-D47A-48CD-A2E1-7429A16BF417.jpeg"
           alt=""
           style="object-position: center top; object-fit: cover"
         />
