--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                 </h2>
 
                 <p class="create-project-description__description">
-                  Beskriv ditt projekt så detaljerat som möjligt. Det gör det
-                  enklare för experten att bedöma om just ditt projekt är rätt
-                  för dem.
+                  Ge en ingående beskrivning av ditt projekt så att hantverkaren
+                  enkelt kan lämna en offert som är anpassad efter ditt
+                  projektkrav.
                 </p>
 
                 <div class="create-project-description__row">
@@ -115,7 +115,7 @@
                     id="Jag-ar-select"
                     class="base-select create-project-description__input _shadow _large"
                   >
-                    <span class="base-input__label"> Typ av fastighet? </span>
+                    <span class="base-input__label"> Typ av bostad? </span>
 
                     <div class="base-select__select">
                       <div class="base-select__container">
@@ -164,7 +164,7 @@
                     rows="10"
                     id="beskrivning"
                     class="base-input__input"
-                    placeholder="En tydlig beskrivning ger fler och bättre svar..."
+                    placeholder="Ju mer detaljerad projektbeskrivningen är, desto bättre offert kan hantverkaren ge. En tydlig beskrivning ger fler och bättre svar."
                   ></textarea>
                 </label>
 
