--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     rows="10"
                     id="beskrivning"
                     class="base-input__input"
-                    placeholder="Ju mer detaljerad projektbeskrivningen är, desto bättre offert kan hantverkaren ge. En tydlig beskrivning ger fler och bättre svar."
+                    placeholder="Beskriv projektet i detalj för att underlätta offertlämning från hantverkaren. En tydlig beskrivning ger fler och bättre svar."
                   ></textarea>
                 </label>
 
@@ -286,12 +286,12 @@
                 </label> -->
 
                 <h3 class="create-project-description__section-title">
-                  Lägg till filer
+                  Bifoga filer ( Valfritt )
                 </h3>
 
                 <p class="create-project-description__section-description">
-                  Ju tydligare, desto bättre – här kan du ladda upp före-bilder,
-                  ritningar och dokument som underlättar för experten.
+                  Här kan du ladda upp bilder dokument eller ritningar för ge
+                  hantverkaren en klar bild av ditt projekt.
                 </p>
 
                 <div
