adding footer text

--- a/index.html
+++ b/index.html
@@ -537,12 +537,11 @@
           </div>
           <div class="the-footer__text text">
             <p>
-              BYGG.se är Sveriges största jämförelsesida för dig som står i
-              begrepp att bygga eller renovera hus. Vi är en samlingspunkt för
-              byggföretag, experter och husägare. Jämför omdömen, priser och
-              hustillverkare och lär dig mer genom vårt stora BYGGbibliotek med
-              steg för steg-artiklar, inspirerande reportage och informativa
-              artiklar om allt som rör bygg och renovering.
+              Renoveringsofferter.se är ett byggföretag som hjälper
+              uppdragsgivare att komma i kontakt och jämföra offerter från
+              hantverkare.
+              <br />
+              © 2023 Alla rättigheter förbehållna Renoveringsoffert Sverige
             </p>
           </div>
         </div>
