add footer text

--- a/index.html
+++ b/index.html
@@ -537,11 +537,12 @@
           </div>
           <div class="the-footer__text text">
             <p>
-              Renoveringsofferter.se är ett byggföretag som hjälper
-              uppdragsgivare att komma i kontakt och jämföra offerter från
-              hantverkare.
-              <br />
-              © 2023 Alla rättigheter förbehållna Renoveringsoffert Sverige
+              Renoveringsofferter.se är en tjänst som specialiserar sig på att
+              underlätta för uppdragsgivare att hitta kvalificerade hantverkare.
+              Vi förstår att renoveringsprojekt kan vara överväldigande och
+              tidskrävande, så vi har skapat en plattform där du enkelt kan
+              komma i kontakt med erfarna hantverkare och jämföra deras
+              offerter.
             </p>
           </div>
         </div>
