--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
                 </h3>
 
                 <p class="create-project-description__section-description">
-                  Här kan du ladda upp bilder dokument eller ritningar för ge
-                  hantverkaren en klar bild av ditt projekt.
+                  Här kan du ladda upp bilder dokument eller ritningar för att
+                  ge hantverkaren en klar bild av ditt projekt
                 </p>
 
                 <div
