--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     rows="10"
                     id="beskrivning"
                     class="base-input__input"
-                    placeholder="Beskriv projektet i detalj för att underlätta offertlämning från hantverkaren. En tydlig beskrivning ger fler och bättre svar."
+                    placeholder="Här kan du ladda upp bilder dokument eller ritningar för att ge hantverkaren en klar bild av ditt projekt."
                   ></textarea>
                 </label>
 
@@ -312,7 +312,8 @@
                       <div class="files-drop-upload__dropzone-separator">
                         <span>eller</span>
                       </div> -->
-                      <?xml version="1.0" ?><!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
+                      <?xml version="1.0" ?>
+                      <!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
                       <svg
                         height="40px"
                         id="Layer_1"
@@ -339,7 +340,7 @@
                         </g>
                       </svg>
                       <div class="files-drop-upload__dropzone-note">
-                        Typ JPEG, JPG, PNG, GIF, PDF<br />
+                        JPEG, JPG, PNG, GIF, PDF<br />
                         Max 10 filer 10MB
                       </div>
                     </div>
