adding content again

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     rows="10"
                     id="beskrivning"
                     class="base-input__input"
-                    placeholder="Här kan du ladda upp bilder dokument eller ritningar för att ge hantverkaren en klar bild av ditt projekt."
+                    placeholder="Beskriv projektet i detalj för att underlätta offertlämning från hantverkaren."
                   ></textarea>
                 </label>
 
@@ -291,7 +291,7 @@
 
                 <p class="create-project-description__section-description">
                   Här kan du ladda upp bilder dokument eller ritningar för att
-                  ge hantverkaren en klar bild av ditt projekt
+                  ge hantverkaren en klar bild av ditt projekt.
                 </p>
 
                 <div
@@ -312,8 +312,7 @@
                       <div class="files-drop-upload__dropzone-separator">
                         <span>eller</span>
                       </div> -->
-                      <?xml version="1.0" ?>
-                      <!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
+                      <?xml version="1.0" ?><!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
                       <svg
                         height="40px"
                         id="Layer_1"
