make footer big

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     rows="10"
                     id="beskrivning"
                     class="base-input__input"
-                    placeholder="Beskriv projektet i detalj för att underlätta offertlämning från hantverkaren."
+                    placeholder="Beskriv projektet i detalj för att underlätta offertlämningen från hantverkaren."
                   ></textarea>
                 </label>
 
@@ -530,9 +530,9 @@
         <div class="the-footer__content container-inner">
           <div to="[object Object]" class="logo the-footer__logo">
             <img
-              style="height: 20px"
+              style="height: 30px"
               src="./img/06094416-4AFC-4E4B-A57E-495AAD06F067 (1).png"
-              alt="Bygg logo"
+              alt="logo"
             />
           </div>
           <div class="the-footer__text text">
