--- a/arrangement.html
+++ b/arrangement.html
@@ -46,7 +46,7 @@
         <!---->
       </header>
 
-      <div style="padding: 15px 0" class="agreements-page container">
+      <div class="agreements-page container">
         <div class="agreements-page__content container-inner">
           <h2 class="agreements-page__title">Allmänt</h2>
           <div class="agreements-page__description text">
@@ -67,16 +67,6 @@
               via Renoveringsoffert. Genom att lämna en förfrågan eller skapa
               ett konto hos Renoveringsoffert accepterar konsumenten
               Användarvillkoren (“Villkoren”) för användning av tjänsten.
-            </p>
-            <p>
-              Dessa allmänna villkor gäller för alla uppdrag som BYGG.se AB
-              hanterar för sina samarbetspartner och gäller för deras och
-              BYGG.se AB`s kunder (nedan "du"/"ni"/"er""din" eller "dig"). Dessa
-              allmänna villkor kan komma att ändras av Custodi från tid till
-              annan. Den senaste versionen av de allmänna villkoren finns alltid
-              på BYGG.se AB`s hemsida. BYGG.se AB skickar en kopia av den
-              senaste versionen av de allmänna villkoren till er endast på er
-              begäran.
             </p>
 
             <h3>Allmänna regler</h3>
@@ -342,7 +332,5 @@
         </div>
       </footer>
     </div>
-
-    <script src="./js/index.js"></script>
   </body>
 </html>
