--- a/arrangement.html
+++ b/arrangement.html
@@ -48,7 +48,7 @@
 
       <div class="agreements-page container">
         <div class="agreements-page__content container-inner">
-          <h2 class="agreements-page__title">Allmänt</h2>
+          <h2 class="agreements-page__title">Allmänna Villkor</h2>
           <div class="agreements-page__description text">
             <p>
               Renoveringsoffert.se drivs av Invest by Ehi och tillhandahåller en
@@ -69,7 +69,7 @@
               Användarvillkoren (“Villkoren”) för användning av tjänsten.
             </p>
 
-            <h3>Allmänna regler</h3>
+            <h4>Allmänna regler</h4>
             <p>
               Att följa svensk lag är en förutsättning när Renoveringsoffert
               tjänster används. Det finns en risk att du blir avstängd vid
@@ -91,7 +91,7 @@
               fylla i övrig information måste denna också vara korrekta. Om en
               presentation inte är personlig kan denna komma att tas bort.
             </p>
-            <h3>Användaruppgifter</h3>
+            <h4>Användaruppgifter</h4>
             <p>
               Renoveringsofferter.se (Invest by ehi), är personuppgiftsansvarig
               och förvaltar användarens personuppgifter enligt
@@ -196,7 +196,9 @@
               <br />
               <span> info@renoveringsoffert.se</span>
             </p>
-            <h3 style="text-align: center">Integritetspolicy</h3>
+            <br />
+            <h4>Integritetspolicy</h4>
+            <br />
             <h5>Grundläggande</h5>
             <p>
               Renoveringsoffert.se är personuppgiftsansvarig. Renoveringsoffert
@@ -303,8 +305,7 @@
             <p>
               Dessa villkor kan uppdateras av Renoveringsoffert. Om det sker
               ändringar kommer Renoveringsoffert att meddela detta genom att
-              placera ett tydligt meddelande på webbplatsen. Kontaktinformation
-              till Badrumsverige: Info@renoveringsoffert.se
+              placera ett tydligt meddelande på webbplatsen.
             </p>
           </div>
         </div>
