change text typo

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
               </h2>
               <p class="auth-registration-page__description">
                 Vi kommer nu att granska din förfrågan sedan kommer våra
-                anslutna renoveringsföretag att kontakta dig för en offert.
+                renoveringsföretag att kontakta dig för en offert.
               </p>
 
               <div class="auth-registration-page__form auth-form">
