make Villkor is villkor

--- a/arrangement.html
+++ b/arrangement.html
@@ -48,7 +48,7 @@
 
       <div class="agreements-page container">
         <div class="agreements-page__content container-inner">
-          <h2 class="agreements-page__title">Allmänna Villkor</h2>
+          <h2 class="agreements-page__title">Allmänna villkor</h2>
           <div class="agreements-page__description text">
             <p>
               Renoveringsoffert.se drivs av Invest by Ehi och tillhandahåller en
